drupal-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal
  labels:
    app: drupal
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: drupal
    tier: frontend
  type: ClusterIP
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: drupal
  labels:
    app: drupal
spec:
  selector:
    matchLabels:
      app: drupal
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: drupal
        tier: frontend
    spec:
      containers:
      - image: bitnami/drupal:latest
        name: drupal
        ports:
        - containerPort: 8080
          name: drupal
        volumeMounts:
          - name: drupal-persistent-storage
            mountPath: /var/www/html/modules
            subPath: modules
          - name: drupal-persistent-storage
            mountPath: /var/www/html/profiles
            subPath: profiles
          - name: drupal-persistent-storage
            mountPath: /var/www/html/sites
            subPath: sites
          - name: drupal-persistent-storage
            mountPath: /var/www/html/themes
            subPath: themes
          - name: drupal-persistent-storage
            mountPath: /var/www/html/sites/default/files/config
            subPath: config
      volumes:
      - name: drupal-persistent-storage
        persistentVolumeClaim:
          claimName: drupal-efs-pvc
